--- a/spoc-manager/spoc-manager-service/pom.xml
+++ b/spoc-manager/spoc-manager-service/pom.xml
@@ -76,10 +76,15 @@
             <artifactId>zkclient</artifactId>
         </dependency>
         <!-- Redis客户端 -->
-        <!--<dependency>-->
-            <!--<groupId>redis.clients</groupId>-->
-            <!--<artifactId>jedis</artifactId>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
