--- a/spoc-sso-web/pom.xml
+++ b/spoc-sso-web/pom.xml
@@ -92,6 +92,30 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
         </dependency>
+        <dependency>
+            <groupId>spoc-project</groupId>
+            <artifactId>spoc-sso-interface</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>spoc-project</groupId>
+            <artifactId>spoc-sso-interface</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>spoc-project</groupId>
+            <artifactId>spoc-sso-interface</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>spoc-project</groupId>
+            <artifactId>spoc-sso-interface</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
     <!-- 配置tomcat插件 -->
     <build>
