--- a/spoc-sso/spoc-sso-service/pom.xml
+++ b/spoc-sso/spoc-sso-service/pom.xml
@@ -3,8 +3,8 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>spoc-sso</artifactId>
         <groupId>spoc-project</groupId>
+        <artifactId>spoc-sso</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -19,10 +19,9 @@
         </dependency>
         <dependency>
             <groupId>spoc-project</groupId>
-            <artifactId>spoc-manager-interface</artifactId>
+            <artifactId>spoc-sso-interface</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-        <!-- spring的依赖 -->
         <!-- Spring -->
         <dependency>
             <groupId>org.springframework</groupId>
@@ -76,7 +75,5 @@
             <artifactId>zkclient</artifactId>
         </dependency>
     </dependencies>
-
-
 
 </project>
